--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "@types/sqlite3": "^3.1.11",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
