--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,8 @@ coverage
 # Benchmarking
 benchmarks/graphs
 
+# Database
+*.db
+
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
